--- a/writings/talks/2025/dh2025/dh2025_open_data.tex
+++ b/writings/talks/2025/dh2025/dh2025_open_data.tex
@@ -1,4 +1,4 @@
-% Created 2025-07-13 Sun 22:48
+% Created 2025-11-03 Mon 18:57
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -27,13 +27,13 @@
 \tableofcontents
 
 \section{‘Original Expression’ to ‘Aggregate Forms’: Language and Copyright in the Shadow of AI}
-\label{sec:org4a910bb}
+\label{sec:org9a4cbea}
 
 \subsection{draft}
-\label{sec:org3d2ee2e}
+\label{sec:orgaaec0ec}
 
 \subsubsection{introduction}
-\label{sec:org77da725}
+\label{sec:orgedb224f}
 I'm going to speak on this topic of open data "in the shadow of AI"
 from the perspective of someone who actively uses ML tools in her
 research and her teaching.
@@ -101,7 +101,7 @@ language forms from mass extraction, while simultaneously making them
 open to certain uses.
 
 \subsubsection{the defense of "transformative"}
-\label{sec:orga2610b1}
+\label{sec:orgd1d69f8}
 First, I'm going to examine OpenAI's argumentation more closely, to
 understand what they mean by the "facts or rules" of language.
 
@@ -147,7 +147,7 @@ Now, I want to ask, how does this characterization of language weigh
 against these models' operatation in practice, and their outputs?
 
 \subsubsection{close reading}
-\label{sec:org1281e4d}
+\label{sec:orgdaa2ec6}
 To explore this question, I'm going to show a few examples from my
 current research, which uses ML tools for the purpose of studying
 discriminatory and prejudiced language. For this, I scrape data from
@@ -395,4 +395,635 @@ and community, over originality or "expression," makes a lot of sense
 for language that takes aggregate forms.
 
 Thank you.
+
+\subsection{writing notes}
+\label{sec:orgea5169a}
+\subsubsection{ACLU close reading}
+\label{sec:org1315756}
+From the other side, the ACLU-generated text, we see the exact same
+phenomenon. Instead of "subjective", however, the investment is in the
+term "reality." 
+
+\begin{quote}
+Masculinity is real and meaningful.
+
+Transgenderism is a false ideology that is not real and that is
+opposed by the very people who seek to deny that freedom and equality
+for all.
+
+The gender binary is not real, it is real, and it is real.
+
+The gender binary is not a binary, it is a reality within us.
+
+The gender binary is not an accepted reality, but one that is accepted
+by a wide swath of people.
+\end{quote}
+
+Here there is more ambivalence around the term "real", which depends
+on whether it is being asserted in a positive way, such as
+"Masculinity is real," or within a negative construction, such as
+"Transgenderism is a false ideology that is not real."
+
+In a couple of the examples, this ambivalence is directly at odds. For
+example, in this amusing construction, "The gender binary is not real,
+it is real, and it is real."
+
+\subsubsection{"comments" quotes on original/copying}
+\label{sec:org23b8537}
+"synthesize similar data which yield increasingly compelling novel
+media"
+
+"nobody looking to read a specific webpage contained in the corpus
+used to train an AI system can do so by studying the AI system or its
+outputs"
+
+
+"does copyright law’s protection of an author’s original expression
+impede AI systems from generating insights about that expression?"
+("Comments" 3).
+
+\subsubsection{aclu quotes}
+\label{sec:org368402d}
+
+\begin{quote}
+Masculinity is a matter of love and celebration.
+
+Masculinity is real and meaningful.
+
+Masculinity is our right.
+
+Masculinity is sacred.
+
+Femininity is a battle, a fight, fought for equal pay.
+
+Femininity is our joy, our struggle, and our fight is our struggle.
+
+Femininity is about allowing people to express themselves without
+government interference.
+
+Femininity is great for all, but not great for some.
+
+Transgenderism is a false ideology that is not real and that is
+opposed by the very people who seek to deny that freedom and equality
+for all.
+
+Transgender is a very individualized experience.
+
+Transgender is people have the right to live authentically, whether we
+have a body or a body.
+
+Transgender is not a new category of discrimination.
+
+The gender binary is not real, it is real, and it is real.
+
+The gender binary is a very individualized form of identity.
+
+The gender binary is also crucial to understanding that Black women of
+color have been disproportionately likely to experience violence from
+other Black women of color, which is anemic to the broader fight for
+gender justice.
+
+The gender binary is not a binary, it is a reality within us.
+
+Men are more likely than other trans people to experience violence,
+abuse, and abuse from cisgender men and other people.
+\end{quote}
+
+\subsubsection{heritage quotes}
+\label{sec:orgbd0f211}
+Expected masc/fem/trans:
+
+\begin{quote}
+Masculinity is the cornerstone of Western civilization.
+
+Masculinity is the fruit of patriarchy, and patriarchy is the heart
+of conservatism.
+
+Transgenderism is a false concept, as every rational person knows.
+
+Transgenderism is a messy one.
+
+Transgender people are, on average, larger, stronger and larger,
+stronger, per muscle mass.
+
+"Women are trying to make mockery illegal."
+
+"Women are not rational beings."
+
+"Women are not like men or women, who are often oppressed by men, but
+women who respond to their own natural inclination toward them."
+\end{quote}
+
+Unexpected masc/fem/trans:
+
+\begin{quote}
+Masculinity is a subjective self-perception, not a universal concept."
+
+Femininity is a subjective, internal sense of self.
+
+Masculinity is a weight.
+
+Femininity is defined by the term “queer of the material,” or ‘queer
+of the material,” or ‘queer of the material,” especially in the form
+of expressive individualism.
+
+Transgender is a fluid, and biological sex is fluid. 
+
+Transgender people are, on average, larger, stronger and more violent
+than nonbinary people.
+
+The gender binary is a pejorative term for those who “deny” a
+person’s biological sex.
+
+The gender binary is a subjective, psychological, and sometimes
+physical construct that masquerates as a social construct.
+
+The gender binary is a subjective, grammatically incorrect and
+illogical concept that conflates sex and gender identity.
+
+Men are inherently vulnerable to sexual assault.
+\end{quote}
+
+Funny ones:
+
+\begin{quote}
+"Transgenderism is a messy, messy, and messy history."
+
+"Transgender people are much like Percy Shelley or Hugh Hefner."
+
+"Men are, after all, biologically males."
+\end{quote}
+\subsubsection{gpt2}
+\label{sec:org0f3da86}
+\begin{quote}
+We don't have to be a man, we don't have to be a woman, we are all
+capable of being masculine.
+\end{quote}
+
+\subsubsection{bank}
+\label{sec:orge9537b5}
+
+
+
+Big Tech developers who are currently taking openly accessible data
+(which is still protected under copyright), as the training material
+for their latest language models. It will consider the legal cases
+pending against Microsoft in particular, and consider some of the
+policy proposals that OpenAI, their subsidiary, has made to the US
+government, for what they call "democratic AI".
+
+I started doing this research because I wanted to understand how they
+justified taking massive amounts of data, without compensating content
+creators, and privatizing the outputs of that data, without taking
+responsibility for how those outputs affect the livelihoods of content
+creators. What I found is that the justification relies on an argument
+for freedom, which, perhaps unsurprisingly, relies on a claim a threat
+to the country. Here, the emphasis comes from contrasting the US with
+China. I close with some suggestions for building "open" work within
+these constraints.
+
+So I begin.
+
+
+Before I go into current perspectives on the meaning of "open", will
+discuss "fair use," which is a crucial concept for understanding how
+even sources that are technically closed, or protected by copyright,
+can be "open" under certain conditions.
+
+"Fair use," as I'm sure many of you know, protects certain usages of
+copyrighted data according to specific conditions, which have to do
+with how much data is taken, how much it is altered, the use of the
+data (such as educational or commercial), and how the use affects
+marketability of the original. Historically, this has protected uses
+like quoting sentences from a book, or making a copy for educational
+or research purposes purposes, or creating a parody. A parody, for
+example, is considered "highly transformative", that in no way can
+substitute for the original.
+
+Legality considers a balance between transformative status and
+commercial effects. With the rise of the internet in the 90s and early
+2000s, new lawsuits started appearing about whether search engines
+counted as fair use. The rulings generally agreed that search engines
+are fair use because they make "highly transformative" use of the
+data, and only provide partial access to that data in the search
+results. 
+A major, perhaps the most substantial, concern in determining fair use
+cases is whether the final product competes with or affects the
+commercial value in any way of the original. And this makes sense,
+because copyright, after all, exists precisely to protect content
+creators.
+
+As you might imagine, this is a perspective wholly neglected by tech
+companies who violate copyright to train their machine learning
+models.
+
+Companies like "OpenAI", which have both "open" and "ai" in the name,
+are misleading. They are not "open" (offering closed, proprietary
+models) and they are not "ai" (but rather generators based on
+statistical predications).
+
+\begin{enumerate}
+\item commericalization
+\label{sec:orgecc2301}
+Before going into that argumentation, I will point out what they do
+say about commercialization, and specifically, how content creators
+ought to be compensated. This is a point that is slightly buried in
+the document, in a footnote in a later section. In this section, they
+argue that concerns about compensation, what they call "distributive
+claims", are outside the responsibility of big tech companies. They
+argue, for example, that:
+
+\begin{quote}
+"\ldots{} this concern falls into a broader category of concerns about the
+relationship between automation, labor, and economic growth"
+
+"\ldots{} we believe that such distributive claims are most efficiently
+addressed through taxation and redistribution, rather than copyright
+policy."
+\end{quote}
+
+After this sentence, they refer to a footnote, which contains a single
+citation to a legal paper from 1994, entitled, "Why the Legal System
+Is Less Efficient than the Income Tax in Redistributing Income."
+
+SLIDE WHY THE LEGAL SYSTEM\ldots{} paper screenshot
+
+This paper, which compares legal system versus the income tax system
+as a means for distributing wealth, finds that the income tax system
+is more efficient due to ability to apply formulas universally. The
+footnote provides a single quote from the paper, that
+"[R]edistribution through legal rules offers no advantage over
+redistributions through the income tax system and is typically less
+efficient." Besides this quote, it offers no additional information
+about how such redistribution would work, if everyone would be taxed,
+or just AI companies (somehow doubtful), and if everyone would receive
+payments (As Sam Altman has discussed the potential for UBI or
+"Universal Basic Income"), or, whether payments would go only to
+content creators. My guess is that taxes would increase for everyone
+in order to support content creators.
+
+\item fair use, campbell case
+\label{sec:orgf4ba933}
+\begin{quote}
+Although such transformative use is not absolutely necessary for a
+finding of fair use, the goal of copyright, to promote science and the
+arts, is generally furthered by the creation of transformative works.
+Such works thus lie at the heart of the fair use doctrine's guarantee
+of breathing space within the confines of copyright, and the more
+transformative the new work, the less will be the significance of
+other factors, like commercialism, that may weigh against a finding of
+fair use. (\emph{Campbell v. Acuff-Rose Music} 1994)
+\end{quote}
+
+Here, they citing a passage from a court case that defends parody
+(Campbell v. Acuff-Rose Music) as fair use. In that case, which was
+argued at the Supreme Court in 1994, the ruling states that "the more
+transformative the new work, the less will be the significance of
+other factors, like commercialism, that may weigh against a finding of
+fair use."
+
+Building on this, OpenAI focus the majority of their argument on the
+transformative nature of AI systems.
+
+Moving back to copyright, and to the so-called "highly transformative"
+nature of AI systems, I will now consider OpenAI's specific arguments
+regarding this criterion.
+
+\item word vectors
+\label{sec:orgc0e26fb}
+Basically, inside every language model, exists a kind of dictionary.
+This dictionary consists of individual words (every single word that
+is present in the training corpus), and each word is appended not by a
+definition in human language, but by a definition in computer
+language, with numbers. These numbers which append each word,
+represent probabilities between that word and \emph{every single other word
+in the corpus}. They are long, very long (and this is why language
+models are caled "large") lists of probabilities. So, inside the
+language model, each word is defined not by what it represents in
+itself, but by its relation to every other word in the corpus.
+
+\emph{For example, the word "cat" will have a series of numbers that
+closely resembles the series of numbers that append the word,
+"kitten," and not as close to the numbers that represent "dog." Still,
+the numbers for "cat" and "dog" will be much closer to each other than
+the numbers that represent "flower," for example.}
+
+Here is an example of the famous formula that introduced the concept
+of the long list of numbers, known technically as "word vectors" to
+the world.
+
+\begin{quote}
+King - Man + Woman = Queen
+
+Mikolov et al., "Distributed Representations of Words and Phrases and
+their Compositionality", 2013.
+\end{quote}
+
+I always like to show this formula, because it illustrates exactly the
+reason why we need more humanists (or more humanist training) involved
+in engineering and computer science research.
+
+The formula showcases power of word vectors: that they can be used
+determine word meaning through calculations. In other words, if every
+word is transformed into a numerical representation, we can do math
+with language. We start with the vector for the word "King," that is,
+a numerical representation of what "King" means in relation to every
+other word. If, from the vector of "King," we subtract the vector of
+"Man," and add that of "Woman," we will arrive at the vector for the
+word "Queen."
+
+Nevermind that the formula relies on gender role and identity as
+symmetrically opposed and universally true, the idea is that word
+meaning can be reliably computed.
+
+And this is why, OpenAI argue, their product is "highly
+transformative," because it turns words into numerical forms that
+represent meaning as a kind of statistic.
+\end{enumerate}
+\subsubsection{move to draft}
+\label{sec:orgea5d1f4}
+The concept of "open" relies on commercialization, fear mongering,
+single perspective. 
+\begin{itemize}
+\item "freedom to learn"
+\item unfettered vs fair use
+\end{itemize}
+
+
+
+What has been "fair use"
+\begin{itemize}
+\item databases, search results "transformative"
+\item without affecting marketability
+\end{itemize}
+
+How OpenAI defines "open":
+\begin{itemize}
+\item the name itself, the original mission, share code and patents with
+the world.
+\item more recently, open aligned with "freedom to learn"
+\begin{itemize}
+\item anthropomophizing machine learning.
+\item "freedom of intelligence" -- "freedom to access and benefit"
+\end{itemize}
+\item associated with innovation
+\begin{itemize}
+\item monopolizing practices (Big Tech prominence)
+\item "innovation \& adoption" (congressional hearing may 8)
+\item Telecommunications Act 1996: deregulated internet for
+consolidation of telecommunications companies.
+\end{itemize}
+\item positioned against authoritarianism and communism.
+\begin{itemize}
+\item "the ai race" is manufacutred
+\item irony: DeepSeek is open source
+\item unfettered vs fair use - depends on perspective
+\end{itemize}
+\end{itemize}
+
+What we can do, new licenses to reflect the moment.
+
+We need new licenses to protect our data. And smaller projects.
+Building off their foundation models to make something smaller.
+Innovate. Like DeepSeek.
+
+"Non-expressive use" - what happens when language is distilled into a
+statistical measure? Is this non-expressive?
+
+The arguments that statistics of language are facts, not expression,
+and therefore can be extracted and monetized -- this is what we have
+to push against.
+
+A vector is its own expression, that is subject to protection. 
+
+\subsection{reading notes}
+\label{sec:org8bfa942}
+\subsubsection{Chandrasekhar 2025}
+\label{sec:org33ca49b}
+\begin{itemize}
+\item how do copyleft licenses transfer to datasets, models, tokens?
+\item EleutherAI developing the Pile V2
+\item Problem isn't that data is used without compensation, but that
+products/outcomes are not contributed back to the commons (19).
+\item are parameter's "transformative"?
+\item The issue becomes: who has the ability to create? To use the GPUs.
+\item alternative licenses:
+\begin{itemize}
+\item Nwulite Odobo "dual regime" - free for users in developing
+countries, multiple licensors for a dataset
+\item Kaitiakitanga - royalties go to community, community ownership
+\end{itemize}
+\item language is extractive, indigenous communities know this.
+\end{itemize}
+\subsubsection{The Author’s Guild v. Hathitrust, 2014}
+\label{sec:org918681a}
+"A district court ruled that libraries that provided a search engine
+company (Google) with books to scan were protected by fair use when
+the libraries later used the resulting digital scans for three
+purposes: preservation, a full-text search engine, and electronic
+access for disabled patrons who could not read the print versions. On
+appeal, the Second Circuit affirmed fair use as to the full-text
+database (“a quintessentially transformative use”) and as to use of
+text in formats accessible to print-disabled people (although not a
+transformative use, it is still considered a fair use based on the
+Betamax decision), but remanded the issue of fair use for long-term
+preservation of books." ("Summaries of Fair Use Cases", Standford
+Libraries)
+
+\subsubsection{Authors Guild v. Google, Inc., No. 13-4829 (2d Cir. 2015)}
+\label{sec:org3487279}
+"Google made digital copies of millions of books submitted to it by
+libraries, scanned them and made them available to search through its
+Google Books service, so that users could—for free—identify relevant
+words, terms, or snippets from the scanned text. Google also allowed
+participating libraries to retain the copies they submitted. Important
+factors: Google’s digitization was deemed a transformative use because
+it provided limited information about the books without allowing users
+more complete access to the works." ("Summaries of Fair Use Cases",
+Standford Libraries)
+
+\subsubsection{“Winning the AI Race: Strengthening US Capabilities in Computing and Innovation.Sam Altman, Testimony, May 8:}
+\label{sec:org9ebbe8d}
+\begin{itemize}
+\item May 8 congressional hearing titled “Winning the AI Race:
+Strengthening US Capabilities in Computing and Innovation.”
+\item OpenAI CEO Sam Altman, Microsoft President Brad Smith, AMD CEO Dr.
+Lisa Su, and CoreWeave CEO Michael Intrator speaking to the Senate
+Commerce Committee.
+\item Argument: that the US requires free rein (low regulation) to defeat
+China in the "AI Race", we will know we win the race if we can
+innovate and export"
+\item Cruz:
+\begin{itemize}
+\item position: regulation is "needless" and "orwellian",
+"paternalistic".
+\item Cruz's contradictory language frames US as free, Europe and China
+as authoritarian.
+\begin{itemize}
+\item Cruz's language contrasts "entrepreneurial freedom and
+technological innovation" against "command-and-control policies
+of Europe".
+\end{itemize}
+\item Drawing from history of the internet, which was developed with
+relatively low regulation in the USA.
+\begin{itemize}
+\item Telecommunications Act of 1996 that promoted competition via
+deregulation, (but in reality, smoothed the road for
+consolidation, "going against its very stated intention by
+indirectly restricting newcomer access to broadcasting"
+(wikipedia, "Telecommunications Act of 1996")
+\end{itemize}
+\item Referring to Biden and some state legislatures: "They want a
+testing regime\ldots{} seemingly something out of Orwell \ldots{} as if AI
+engineers lack the intelligence to responsibly build AI without
+the bureaucrats"
+\item "U.S. dominance in AI depends on two factors: innovation and
+adoption."
+\end{itemize}
+\item Altman:
+\begin{itemize}
+\item vetting systems would be "disastrous" for industry, "sensible
+regulation that does not slow us down"
+\end{itemize}
+\item Smith, microsoft president:
+\begin{itemize}
+\item the way to know we've won the "race" is if our tech is broadly
+adopted.
+\end{itemize}
+\end{itemize}
+
+\subsubsection{NYTimes complaint}
+\label{sec:orgcd01747}
+\begin{itemize}
+\item NYT complaint argues that OpenAI "stea[s] audiences away from it",
+that outputs "compete", "closely mimic" NYT articles, and that the
+work is not "transformative". (page 4).
+\end{itemize}
+
+
+--> argumment seems to be about outputs being copies, when should be
+about inputs?
+
+\subsubsection{2018 OpenAI press release, december 12 2018, "Introducing OpenAI"}
+\label{sec:orgb4653ea}
+\begin{itemize}
+\item OpenAI started as a nonprofit, and raised money with promises to
+share their products freely:
+\begin{itemize}
+\item "Researchers will be strongly encouraged to publish their work,
+whether as papers, blog posts, or code, and our patents⁠ (if any)
+will be shared with the world" (OpenAI 12/11/2018 press release).
+\end{itemize}
+\end{itemize}
+
+\subsubsection{2025 "OpenAI’s proposals for the U.S. AI Action Plan" march 13, 2025}
+\label{sec:org9ccc630}
+\begin{itemize}
+\item "we must ensure that people have freedom of intelligence, by which
+we mean the freedom to access and benefit from AI as it advances"
+\item "freedom-focused policy proposals"
+\item "neutralizes potential PRC benefit from American AI companies having
+to comply with overly burdensome state laws."
+\begin{itemize}
+\item "freedom to innovate" regulations
+\item "copyright strategy that promotes the freedom to learn"
+\begin{itemize}
+\item "secure Americans’ freedom to learn from AI"
+\item "avoid forfeiting our AI lead to the PRC"
+\end{itemize}
+\item "export strategy"
+\item develop infrastructure
+\item adoption by government
+\end{itemize}
+\end{itemize}
+
+\subsubsection{2025 OSTP OSTP proposal, march 13, 2025}
+\label{sec:org337ed33}
+\begin{itemize}
+\item Office of Science and Technology Policy proposal
+\item proposals to help OSTP develop "AI Action Plan \ldots{} that ensure[s]
+that American-led AI built on democratic principles continues to
+prevail over CCP-build autocratic, authoritarian AI".
+\item "democratic AI"
+\begin{itemize}
+\item "a free market promoting free and fair competition.
+\item "freedom for developers and users to work with our tools"
+\item "preventing government use\ldots{} to amass power and control their
+citizens"
+\end{itemize}
+\item Deepseek is a threat because "simultaneously state-subsidized,
+state-controlled, and fully available\ldots{} cost[ing] users privacy and
+security."
+\item point \#3: "Copyright: Promoting the Freedom to Learn"
+\begin{itemize}
+\item need to use copyrighted material to compete with China, a "matter
+of national security."
+\item contradiction between China's "unfettered access" vs OpenAI's
+"fair use":
+\begin{itemize}
+\item "Applying the fair use doctrine to AI is not only a matter of
+American competitiveness-—it’s a matter of national security.
+The rapid advances seen with the PRC’s DeepSeek, among other
+recent developments, show that America’s lead on frontier AI is
+far from guaranteed. Given concerted state support for critical
+industries and infrastructure projects, there’s little doubt
+that the PRC’s AI developers will enjoy unfettered access to
+data—including copyrighted data—that will improve their models.
+If the PRC’s developers have unfettered access to data and
+American companies are left without fair use access, the race
+for AI is effectively over. America loses, as does the success
+of democratic AI. Ultimately, access to more data from the
+widest possible range of sources will ensure more access to more
+powerful innovations that deliver even more knowledge" (10-11).
+\end{itemize}
+\end{itemize}
+\end{itemize}
+\subsubsection{2023(?) OpenAI Comments on Intellectual Property Protection for Artificial Intelligence Innovation}
+\label{sec:org4f33706}
+\begin{itemize}
+\item argue that, “Under current law, training AI systems constitutes fair
+use”
+\begin{itemize}
+\item argument for fair use hinges on "transformative" use of copyrighted work
+\begin{itemize}
+\item citing a passage from a court case that defends parody (Campbell
+v. Acuff-Rose Music) as fair use to argue that AI outputs are
+"highly transformative"
+\item input data: copyrighted works become statistical patterns,
+“non-expressive”"
+\item output data: nobody can use AI to read the specific webpages
+they are trained on: they will still go to NYTimes to read the
+news. (debatable).
+\end{itemize}
+\end{itemize}
+\item "mission is to ensure that artificial general intelligence (“AGI”)
+benefits all of humanity”"
+\item anthropomorphize AI training into human learning:
+\begin{itemize}
+\item “does copyright law’s protection of an author’s original
+expression impede AI systems from generating insights about that
+expression?”
+\item ““training” refers to the process by which an AI model learns
+patterns”
+\end{itemize}
+\item “Authors may object that the outputs of generative AI systems will
+harm the value of their works. We address this objection in Section
+II.”
+\begin{itemize}
+\item “Distributive Issues from AI-Generated Non-Infringing Works Should
+Be Addressed by Other Policies”
+\item “this concern falls into a broader category of concerns about the
+relationship  between automation, labor, and economic growth”
+\item "we believe that such distributive claims are most efficiently
+addressed through taxation and redistribution, rather than
+copyright policy.”
+\begin{itemize}
+\item “Louis Kaplow \& Steven Shavell, Why the Legal System Is Less
+Efficient than the Income Tax  in Redistributing Income, 23 J.
+Legal Stud. 667 (1994) (“[R]edistribution through legal rules
+offers no  advantage over redistributions through the income tax
+system and is typically less efficient.”).”
+\end{itemize}
+\end{itemize}
+\end{itemize}
 \end{document}
